plant service test extended.